Implemented Sass and restructured directories

--- a/tetris.html
+++ b/tetris.html
@@ -6,14 +6,20 @@
     <title>Tetris</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="tetris.css" />
-    <script src="moves.js"></script>
-    <script src="enums.js"></script>
-    <script src="coord.js"></script>
-    <script src="drawing.js"></script>
-    <script src="input.js"></script>
-    <script src="block.js"></script>
-    <script src="piece.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./css/tetris.css"
+    />
+
+    <script src="./js/moves.js"></script>
+    <script src="./js/enums.js"></script>
+    <script src="./js/coord.js"></script>
+    <script src="./js/drawing.js"></script>
+    <script src="./js/block.js"></script>
+    <script src="./js/piece.js"></script>
+    <script defer src="./js/tetris.js"></script>
   </head>
   <body>
     <div class="stuff">
@@ -45,6 +51,5 @@
         </div>
       </div>
     </div>
-    <script src="tetris.js"></script>
   </body>
 </html>
