more filename fixes

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       href="./css/tetris.css"
     />
 
-    <script src="/js/moves.js"></script>
-    <script src="/js/enums.js"></script>
-    <script src="/js/coord.js"></script>
-    <script src="/js/drawing.js"></script>
-    <script src="/js/block.js"></script>
-    <script src="/js/piece.js"></script>
-    <script defer src="/js/tetris.js"></script>
+    <script src="./js/moves.js"></script>
+    <script src="./js/enums.js"></script>
+    <script src="./js/coord.js"></script>
+    <script src="./js/drawing.js"></script>
+    <script src="./js/block.js"></script>
+    <script src="./js/piece.js"></script>
+    <script defer src="./js/tetris.js"></script>
   </head>
   <body>
     <div class="stuff">
